fix spacing issues with new font

--- a/src/css/components/bar_buttons.component.pcss
+++ b/src/css/components/bar_buttons.component.pcss
@@ -3,6 +3,7 @@
     background: var(--dark-grey);
     color: var(--font-colour);
     padding: 0.5em;
+    display: inline-flex;
 
     &:hover, &:focus {
         background: var(--lighter-grey);
