--- a/src/css/components/menus.component.pcss
+++ b/src/css/components/menus.component.pcss
@@ -31,7 +31,8 @@
             margin: 0.15em;
             background: var(--dark-red);
             color: var(--font-colour);
-            padding: 0.25em;
+            padding: 0.4em;
+            display: inline-flex;
 
             &:hover, &:focus {
                 background: var(--lighter-red);
